; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_cpu.c_cpu_processor_free.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_cpu.c_cpu_processor_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@processor_master = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_processor_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = icmp ne i32* %6, @processor_master
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i32*, i32** %2, align 8
  %10 = bitcast i32* %9 to i8*
  %11 = call i32 @kfree(i8* %10, i32 4)
  br label %12

12:                                               ; preds = %8, %5, %1
  ret void
}

declare dso_local i32 @kfree(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
